# Qdrant-Product-Recommender

./: .gitignore  README.md  docker-compose.yml  example.env  exit  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py
app/models/: product.py  recommendation.py  sync.py
app/routers/: admin.py  products.py
app/services/: embedding_service.py  recommendation_service.py  sync_service.py
app/utils/: auth.py  logging.py
